<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceScreen
        android:icon="@drawable/pref_basic"
        android:key="preferenceBasicScreen"
        android:theme="@style/PreferenceScreen"
        android:title="@string/pref_cat_main">

        <EditTextPreference
            android:defaultValue="http://api.gosport.loc"
            android:dialogTitle="@string/pref_server_url_dialog_title"
            android:icon="@drawable/pref_server"
            android:key="@string/serverUrl"
            android:title="@string/pref_server_url" />

    </PreferenceScreen>
    <PreferenceScreen
        android:icon="@drawable/pref_check"
        android:title="Отображение и данные">
        <PreferenceCategory android:title="@string/pref_cat_show">
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="@string/pref_push_notification_key"
                android:title="@string/pref_push_notification" />
        </PreferenceCategory>
    </PreferenceScreen>
</PreferenceScreen>
