<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <RelativeLayout
        android:id="@+id/RelativeLayout01"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">

        <org.osmdroid.views.MapView
            android:id="@+id/stadium_mapview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true" />

        <ImageView
            android:id="@+id/stadium_add_icon"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/stadium_mapview"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/menu_hockey" />

        <EditText
            android:id="@+id/stadium_add_title"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/stadium_mapview"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_toRightOf="@+id/stadium_add_icon"
            android:layout_toEndOf="@+id/stadium_add_icon"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/team_add_name"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:textColor="#000000"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/stadium_add_icon2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/user_level"
            android:layout_below="@+id/stadium_add_icon"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp" />

        <Spinner
            android:id="@+id/simple_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            style="@android:style/Widget.Holo.Spinner"
            android:layout_below="@+id/stadium_add_icon"
            android:layout_toEndOf="@+id/stadium_add_icon2"
            android:layout_toRightOf="@+id/stadium_add_icon2"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:prompt="@string/team_add_sport"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/stadium_add_icon3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/user_location"
            android:layout_below="@+id/stadium_add_icon"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp" />

        <EditText
            android:id="@+id/stadium_add_address"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_below="@+id/stadium_add_icon2"
            android:layout_gravity="start"
            android:layout_toRightOf="@+id/stadium_add_icon3"
            android:layout_toEndOf="@+id/stadium_add_icon3"
            android:hint="@string/stadium_add_address"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/stadium_add_icon4"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/stadium_add_icon3"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/menu_football" />

        <EditText
            android:id="@+id/stadium_add_description"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_below="@+id/stadium_add_icon4"
            android:layout_gravity="start"
            android:layout_toRightOf="@+id/stadium_add_icon4"
            android:layout_toEndOf="@+id/stadium_add_icon4"
            android:hint="@string/team_add_description"
            android:lines="3"
            android:minLines="2"
            android:gravity="top|left"
            android:maxLines="3"
            android:textColor="#000000"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/stadium_add_icon5"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/stadium_add_icon4"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/menu_photo" />

        <EditText
            android:id="@+id/stadium_add_photo"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_below="@+id/stadium_add_icon4"
            android:layout_gravity="start"
            android:layout_toRightOf="@+id/stadium_add_icon5"
            android:layout_toEndOf="@+id/stadium_add_icon5"
            android:hint="@string/stadium_add_photo"
            android:textSize="16sp" />

        <Button
            android:id="@+id/stadium_button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/stadium_add_photo"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:height="35dp"
            android:background="@color/md_blue_300"
            android:minHeight="0dp"
            android:onClick="mOnClickMethod"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/profile_submit_button"
            android:textColor="#FAFAFA" />

    </RelativeLayout>
</ScrollView>
