<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <RelativeLayout
        android:id="@+id/RelativeLayout01"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">

        <ImageView
            android:id="@+id/profile_add_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:background="@color/md_blue_300"
            android:contentDescription="@string/image_description" />

        <ImageView
            android:id="@+id/profile_add_user_icon"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/profile_add_image"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/user_profile" />

        <EditText
            android:id="@+id/profile_add_name"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/profile_add_image"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_toRightOf="@+id/profile_add_user_icon"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/profile_add_name"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:textColor="#000000"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/profile_add_user_icon2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/user_type"
            android:layout_below="@+id/profile_add_user_icon"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp" />

        <Spinner
            android:id="@+id/profile_add_type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_below="@+id/profile_add_user_icon"
            android:layout_toEndOf="@+id/profile_add_user_icon2"
            android:layout_toRightOf="@+id/profile_add_user_icon2"
            android:entries="@array/profile_type"
            android:prompt="@string/profile_type"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/profile_add_user_icon3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/profile_add_user_icon2"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/user_age" />

        <EditText
            android:id="@+id/profile_add_age"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/profile_add_user_icon2"
            android:layout_gravity="start"
            android:layout_toEndOf="@+id/profile_add_user_icon3"
            android:layout_toRightOf="@+id/profile_add_user_icon3"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/birth_date"
            android:paddingLeft="10dp"
            android:textColor="#000000"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/profile_add_user_icon4"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/profile_add_user_icon3"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/user_phone" />

        <EditText
            android:id="@+id/profile_add_phone"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/profile_add_user_icon3"
            android:layout_gravity="start"
            android:layout_toRightOf="@+id/profile_add_user_icon4"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/phone"
            android:inputType="phone"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:textColor="#000000"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/profile_add_user_icon5"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/profile_add_user_icon4"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:maxWidth="32dp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/user_vk" />

        <EditText
            android:id="@+id/profile_add_vk"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/profile_add_user_icon4"
            android:layout_gravity="start"
            android:layout_toRightOf="@+id/profile_add_user_icon5"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/profile_add_vk"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/profile_button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_add_user_icon5"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_marginTop="20dp"
            android:height="35dp"
            android:background="@color/md_blue_300"
            android:minHeight="0dp"
            android:onClick="mOnClickMethod"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/profile_submit_button"
            android:textColor="#FAFAFA" />

    </RelativeLayout>
</ScrollView>
